--- a/_site.yml
+++ b/_site.yml
@@ -2,7 +2,7 @@ name: "webpagecode"
 title: "Martin Stelmach"
 description: |
   My Website
-output_dir: "."
+output_dir: "docs"
 navbar:
   right:
     - text: "Home"
